<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="@dimen/margin_medium">

        <android.support.v7.widget.AppCompatTextView
            style="@style/SettingsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_fruits" />

        <com.szpejsoft.mydiet.views.settings.NumberEdit
            android:id="@+id/fruitPortionsEdit"
            style="@style/SettingsNumberEdit" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/SettingsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_vegetables" />

        <com.szpejsoft.mydiet.views.settings.NumberEdit
            android:id="@+id/vegetablePortionEdit"
            style="@style/SettingsNumberEdit" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/SettingsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_grain_products" />

        <com.szpejsoft.mydiet.views.settings.NumberEdit
            android:id="@+id/grainPortionsEdit"
            style="@style/SettingsNumberEdit" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/SettingsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_dairy" />

        <com.szpejsoft.mydiet.views.settings.NumberEdit
            android:id="@+id/dairyPortionsEdit"
            style="@style/SettingsNumberEdit" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/SettingsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_meat" />

        <com.szpejsoft.mydiet.views.settings.NumberEdit
            android:id="@+id/meatPortionsEdit"
            style="@style/SettingsNumberEdit" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/SettingsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_fat" />

        <com.szpejsoft.mydiet.views.settings.NumberEdit
            android:id="@+id/fatPortionsEdit"
            style="@style/SettingsNumberEdit" />


        <android.support.v7.widget.AppCompatTextView
            style="@style/SettingsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_meals_interval" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/intervalTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="3:15"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/text_huge" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings_save_changes" />
    </android.support.v7.widget.LinearLayoutCompat>
</ScrollView>
